udpate merchant dashboard structure

--- a/frontend/products/software/wise-size/index.html
+++ b/frontend/products/software/wise-size/index.html
@@ -1580,6 +1580,9 @@
           <div class="hero-button" id="heroBtn" role="button" aria-label="Scroll for more">
             Scroll for more <span class="arrow" aria-hidden="true"></span>
           </div>
+          <div class="hero-button" id="heroBtn" role="button" href="dashboard/">
+            Get Started
+          </div>
         </div>
       </section>
 
